// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render blue Button 1`] = `
<div>
  <button
    class="px-9 py-3 m-auto shadow-md rounded-md transition-all text-center w-fit text-base font-semibold cursor-pointer hover:translate-y-0.5 hover:brightness-105 bg-blue-600 text-white"
    data-testid="button"
    variantprops="[object Object]"
  >
    Primary
  </button>
</div>
`;

exports[`Button should render dark green Button 1`] = `
<div>
  <button
    class="px-9 py-3 m-auto shadow-md rounded-md transition-all text-center w-fit text-base font-semibold cursor-pointer hover:translate-y-0.5 hover:brightness-105 bg-green-500 text-white"
    data-testid="button"
    variantprops="[object Object]"
  >
    Success
  </button>
</div>
`;

exports[`Button should render dark red Button 1`] = `
<div>
  <button
    class="px-9 py-3 m-auto shadow-md rounded-md transition-all text-center w-fit text-base font-semibold cursor-pointer hover:translate-y-0.5 hover:brightness-105 bg-red-600 text-white"
    data-testid="button"
    variantprops="[object Object]"
  >
    Cancel
  </button>
</div>
`;

exports[`Button should render default button when variant is null 1`] = `
<div>
  <button
    class="px-9 py-3 m-auto shadow-md rounded-md transition-all text-center w-fit text-base font-semibold cursor-pointer hover:translate-y-0.5 hover:brightness-105 bg-white text-black"
    data-testid="button"
    variantprops="[object Object]"
  >
    Primary
  </button>
</div>
`;

exports[`Button should render green Button 1`] = `
<div>
  <button
    class="px-9 py-3 m-auto shadow-md rounded-md transition-all text-center w-fit text-base font-semibold cursor-pointer hover:translate-y-0.5 hover:brightness-105 bg-green-300 text-lime-700"
    data-testid="button"
    variantprops="[object Object]"
  >
    Success
  </button>
</div>
`;

exports[`Button should render red Button 1`] = `
<div>
  <button
    class="px-9 py-3 m-auto shadow-md rounded-md transition-all text-center w-fit text-base font-semibold cursor-pointer hover:translate-y-0.5 hover:brightness-105 bg-red-300 text-red-800"
    data-testid="button"
    variantprops="[object Object]"
  >
    Cancel
  </button>
</div>
`;
